Full Source/runoff/docs_txt_ps1/part_0001/build_result3.txt
[  1%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_MultiResponse.cpp.obj
[  2%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32TerminalManager.cpp.obj
[  4%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/TransparentRenderer.cpp.obj
[  5%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/config/IDEConfig.cpp.obj
[  7%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/stubs.cpp.obj
[  8%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/agentic_engine.cpp.obj
[  9%] Building CXX object CMakeFiles/RawrXD-Win32IDE.dir/src/subagent_core.cpp.obj
D:\rawrxd\src\win32app\Win32IDE_MultiResponse.cpp: In member function 'void Win32IDE::cmdMultiResponseGenerate()':
D:\rawrxd\src\win32app\Win32IDE_MultiResponse.cpp:98:26: error: 'getLastUserMessage' was not declared in this scope
   98 |     std::string prompt = getLastUserMessage();
      |                          ^~~~~~~~~~~~~~~~~~
D:\rawrxd\src\win32app\Win32IDE_MultiResponse.cpp: In member function 'void Win32IDE::handleMultiResponseResultsEndpoint(SOCKET, const std::string&)':
D:\rawrxd\src\win32app\Win32IDE_MultiResponse.cpp:434:34: error: 'class MultiResponseEngine' has no member named 'getSessionById'; did you mean 'getSession'?
  434 |         : m_multiResponseEngine->getSessionById(sessionId);
      |                                  ^~~~~~~~~~~~~~
      |                                  getSession
mingw32-make[3]: *** [CMakeFiles\RawrXD-Win32IDE.dir\build.make:529: CMakeFiles/RawrXD-Win32IDE.dir/src/win32app/Win32IDE_MultiResponse.cpp.obj] Error 1
mingw32-make[3]: *** Waiting for unfinished jobs....
mingw32-make[2]: *** [CMakeFiles\Makefile2:156: CMakeFiles/RawrXD-Win32IDE.dir/all] Error 2
mingw32-make[1]: *** [CMakeFiles\Makefile2:163: CMakeFiles/RawrXD-Win32IDE.dir/rule] Error 2
mingw32-make: *** [Makefile:149: RawrXD-Win32IDE] Error 2
